--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,18 @@
   <artifactId>API-migration-recommendation-tool</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
+	  <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.5</version>
+	</dependency>
+	  <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.5.7</version>
+	</dependency>
 	  <!-- https://mvnrepository.com/artifact/junit/junit -->
 	<dependency>
 	    <groupId>junit</groupId>
