--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>kingarj</groupId>
   <artifactId>API-migration-recommendation-tool</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <dependencies>
 	  <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 	<dependency>
