--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,11 @@
 	    <version>2.10.0</version>
 	    <scope>test</scope>
 	</dependency>
+	<!-- logback -->
+	<dependency>
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-classic</artifactId>
+	    <version>1.1.7</version>
+	</dependency>
   </dependencies>
 </project>
