--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,11 @@
 	    <artifactId>logback-classic</artifactId>
 	    <version>1.1.7</version>
 	</dependency>
+	<!-- guava -->
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>23.0</version>
+	</dependency>
   </dependencies>
 </project>
