--- a/pom.xml
+++ b/pom.xml
@@ -47,4 +47,12 @@
 	    <version>23.0</version>
 	</dependency>
   </dependencies>
+   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+  </build>
 </project>
